--- a/src/app/components/campaign/campaign-list/campaign-list.component.html
+++ b/src/app/components/campaign/campaign-list/campaign-list.component.html
@@ -35,7 +35,11 @@
     <ng-container matColumnDef="delete">
       <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let campaign">
-        <button mat-icon-button color="warn">
+        <button
+          mat-icon-button
+          color="warn"
+          (click)="deleteCampaign(campaign._id)"
+        >
           <mat-icon>delete</mat-icon>
         </button>
       </td>
