--- a/src/app/components/user/login/login.component.html
+++ b/src/app/components/user/login/login.component.html
@@ -1,1 +1,29 @@
-<p>login works!</p>
+<form class="table">
+  <h2>Login</h2>
+  <mat-form-field>
+    <mat-label>Company Name</mat-label>
+    <input matInput />
+  </mat-form-field>
+
+  <mat-form-field floatLabel="always">
+    <mat-label>Password</mat-label>
+    <input
+      matInput
+      type="password"
+      class="example-right-align"
+      matInput
+      [type]="hide ? 'password' : 'text'"
+    />
+    <button
+      mat-icon-button
+      matSuffix
+      (click)="hide = !hide"
+      [attr.aria-label]="'Hide password'"
+      [attr.aria-pressed]="hide"
+    >
+      <mat-icon>{{ hide ? "visibility_off" : "visibility" }}</mat-icon>
+    </button>
+  </mat-form-field>
+
+  <button mat-button color="primary" type="submit">Submit</button>
+</form>
