Add: Navbar and logout

--- a/src/app/components/campaign/campaign-list/campaign-list.component.html
+++ b/src/app/components/campaign/campaign-list/campaign-list.component.html
@@ -1,4 +1,4 @@
-<p>campaign-list works!</p>
+<app-navbar />
 <button mat-raised-button class="demo-button" (click)="addCampaignDialog()">
   Add data
 </button>
