--- a/src/app/components/campaign/campaign-add/campaign-add.component.html
+++ b/src/app/components/campaign/campaign-add/campaign-add.component.html
@@ -1,37 +1,72 @@
-<form class="table">
+<form
+  class="table"
+  [formGroup]="addCampaignForm"
+  (ngSubmit)="submitAddCampaignForm()"
+>
   <h2>Add Product Campaign</h2>
+  <!-- Name -->
   <mat-form-field>
     <mat-label>Campaign Name</mat-label>
-    <input matInput />
+    <input matInput formControlName="campaignName" />
   </mat-form-field>
+
+  <!-- Keyword -->
   <mat-form-field>
     <mat-label>Keywords</mat-label>
-    <input matInput />
+    <input matInput formControlName="keywords" />
   </mat-form-field>
-  <mat-slide-toggle color="primary">Status</mat-slide-toggle>
+
+  <!-- Fund -->
   <mat-form-field floatLabel="always">
     <mat-label>Campaign Fund</mat-label>
-    <input matInput type="number" class="example-right-align" placeholder="0" />
+    <input
+      matInput
+      type="number"
+      formControlName="campaignFund"
+      class="example-right-align"
+      placeholder="0"
+    />
     <span matTextPrefix>$&nbsp;</span>
     <span matTextSuffix>.00</span>
   </mat-form-field>
+
+  <!-- Town -->
   <mat-form-field>
     <mat-label>Town</mat-label>
-    <mat-select>
+    <mat-select formControlName="town">
       <mat-option value="Kraków">Kraków</mat-option>
       <mat-option value="Tarnów">Tarnów</mat-option>
     </mat-select>
   </mat-form-field>
+
+  <!-- Amount -->
   <mat-form-field floatLabel="always">
     <mat-label>Amount</mat-label>
-    <input matInput type="number" class="example-right-align" placeholder="0" />
+    <input
+      matInput
+      type="number"
+      formControlName="bidAmount"
+      class="example-right-align"
+      placeholder="0"
+    />
     <span matTextPrefix>$&nbsp;</span>
     <span matTextSuffix>.00</span>
   </mat-form-field>
+
+  <!-- Radius -->
   <mat-form-field>
     <mat-label>Radius</mat-label>
-    <input matInput type="number" class="example-right-align" placeholder="0" />
+    <input
+      matInput
+      type="number"
+      formControlName="radius"
+      class="example-right-align"
+      placeholder="0"
+    />
     <span matTextPrefix>$&nbsp;</span>
   </mat-form-field>
+  <!-- Status -->
+  <mat-slide-toggle color="primary">Status</mat-slide-toggle>
+
   <button mat-button color="primary" type="submit">Submit</button>
 </form>
