--- a/src/app/components/campaign/campaign-list/campaign-list.component.html
+++ b/src/app/components/campaign/campaign-list/campaign-list.component.html
@@ -5,7 +5,7 @@
 <div class="tab">
   <table
     mat-table
-    [dataSource]="campaigns$"
+    [dataSource]="dataSource"
     class="mat-elevation-z8 tab"
     matSort
   >
@@ -15,7 +15,7 @@
         mat-header-cell
         *matHeaderCellDef
         mat-sort-header
-        sortActionDescription="Sort by mame"
+        sortActionDescription="Sort by name"
       >
         Campaign Name
       </th>
@@ -49,7 +49,7 @@
     <!-- Radius -->
     <ng-container matColumnDef="radius">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Radius</th>
-      <td mat-cell *matCellDef="let campaign">{{ campaign.radius }}</td>
+      <td mat-cell *matCellDef="let campaign">{{ campaign.radius }} km</td>
     </ng-container>
 
     <!-- Delete button -->
@@ -70,7 +70,11 @@
     <ng-container matColumnDef="edit">
       <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let campaign">
-        <button mat-icon-button color="primary">
+        <button
+          mat-icon-button
+          color="primary"
+          (click)="editCampaignDialog(campaign._id)"
+        >
           <mat-icon>menu</mat-icon>
         </button>
       </td>
