Add: Emerald account balance service

--- a/src/app/components/campaign/campaign-list/campaign-list.component.html
+++ b/src/app/components/campaign/campaign-list/campaign-list.component.html
@@ -1,4 +1,5 @@
 <app-navbar />
+<p>Your emerald account balance= {{ emeraldAccountBalance }}</p>
 <button mat-raised-button class="demo-button" (click)="addCampaignDialog()">
   Add data
 </button>
