Add: Styling and error handling

--- a/src/app/components/campaign/campaign-edit/campaign-edit.component.html
+++ b/src/app/components/campaign/campaign-edit/campaign-edit.component.html
@@ -100,5 +100,5 @@
   >
 
   <button mat-button color="primary" type="submit">Save Changes</button>
-  <button mat-button color="warn">Cancel</button>
+  <button mat-button color="warn" (click)="onCancel()">Cancel</button>
 </form>
