--- a/src/app/components/campaign/campaign-add/campaign-add.component.html
+++ b/src/app/components/campaign/campaign-add/campaign-add.component.html
@@ -8,8 +8,16 @@
   <mat-form-field>
     <mat-label>Campaign Name</mat-label>
     <input matInput formControlName="campaignName" />
+    <mat-error
+      *ngIf="
+        addCampaignForm.get('campaignName')?.invalid &&
+        (addCampaignForm.get('campaignName')?.dirty ||
+          addCampaignForm.get('campaignName')?.touched)
+      "
+    >
+      Campaign Name is required and must be at least 3 characters long.
+    </mat-error>
   </mat-form-field>
-
   <!-- Keyword -->
   <mat-form-field class="example-chip-list">
     <mat-label>Keywords</mat-label>
@@ -49,15 +57,19 @@
   <mat-form-field>
     <mat-label>Town</mat-label>
     <mat-select formControlName="town">
-      <mat-option value="Kraków">Kraków</mat-option>
-      <mat-option value="Tarnów">Tarnów</mat-option>
+      <mat-option *ngFor="let town of townOptions" [value]="town">{{
+        town
+      }}</mat-option>
     </mat-select>
+    <mat-error *ngIf="addCampaignForm.get('town')?.errors?.['required']">
+      Town is required.
+    </mat-error>
   </mat-form-field>
 
   <!-- Radius -->
   <mat-label>Radius</mat-label>
   <mat-slider
-    min="0"
+    min="1"
     max="100"
     step="1"
     showTickMarks
@@ -78,6 +90,15 @@
       placeholder="0"
     />
     <span matTextPrefix>$&nbsp;</span>
+    <mat-error
+      *ngIf="
+        addCampaignForm.get('campaignFund')?.invalid &&
+        (addCampaignForm.get('campaignFund')?.dirty ||
+          addCampaignForm.get('campaignFund')?.touched)
+      "
+    >
+      Campaign Fund is required and must be at least 20.
+    </mat-error>
   </mat-form-field>
 
   <!-- Amount -->
@@ -89,14 +110,27 @@
       formControlName="bidAmount"
       class="example-right-align"
       placeholder="0"
+      step="0.1"
     />
     <span matTextPrefix>$&nbsp;</span>
+    <mat-error
+      *ngIf="
+        addCampaignForm.get('bidAmount')?.invalid &&
+        (addCampaignForm.get('bidAmount')?.dirty ||
+          addCampaignForm.get('bidAmount')?.touched)
+      "
+    >
+      Bid Amount is required and must be at least 0.10.
+    </mat-error>
   </mat-form-field>
 
   <!-- Status -->
   <mat-slide-toggle color="primary" formControlName="status"
     >Status
   </mat-slide-toggle>
-
+  <mat-error *ngIf="errorMessage">
+    {{ errorMessage }}
+  </mat-error>
   <button mat-button color="primary" type="submit">Submit</button>
+  <button mat-button color="warn" (click)="onCancel()">Cancel</button>
 </form>
