--- a/src/app/components/user/register/register.component.scss
+++ b/src/app/components/user/register/register.component.scss
@@ -4,3 +4,57 @@
   justify-content: center;
   align-items: center;
 }
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.form-container {
+  background-color: #f0f0f0;
+  border-radius: 5px;
+  padding: 20px;
+  width: 300px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+h2 {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+mat-form-field {
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+mat-label {
+  font-size: 14px;
+}
+
+input {
+  font-size: 16px;
+}
+
+.submit-button {
+  width: 100%;
+}
+.submit-button:hover {
+  width: 100%;
+  scale: (105%);
+}
+.link-login {
+  text-align: center;
+  font-size: 14px;
+  color: #888;
+  cursor: pointer;
+}
+.link-login:hover {
+  color: palevioletred;
+}
+.error-message {
+  color: red;
+  font-size: 14px;
+  margin-top: 5px;
+}
