--- a/src/app/components/user/login/login.component.html
+++ b/src/app/components/user/login/login.component.html
@@ -34,8 +34,15 @@
 
       <p class="link-register" routerLink="/register">Don't have an account?</p>
 
-      <button mat-button color="primary" type="submit" class="submit-button">
-        Submit
+      <button
+        mat-button
+        color="primary"
+        type="submit"
+        class="submit-button"
+        [disabled]="loading"
+      >
+        <span *ngIf="!loading">Submit</span>
+        <mat-spinner diameter="30" *ngIf="loading"></mat-spinner>
       </button>
     </form>
   </div>
