--- a/src/app/components/user/register/register.component.html
+++ b/src/app/components/user/register/register.component.html
@@ -73,8 +73,15 @@
       </mat-form-field>
       <p class="link-login" routerLink="/login">Already have an account?</p>
 
-      <button mat-button color="primary" type="submit" class="submit-button">
-        Submit
+      <button
+        mat-button
+        color="primary"
+        type="submit"
+        class="submit-button"
+        [disabled]="loading"
+      >
+        <span *ngIf="!loading">Submit</span>
+        <mat-spinner diameter="30" *ngIf="loading"></mat-spinner>
       </button>
     </form>
   </div>
